getPrinterNames() leaks nameArray if Java String allocation fails

XMLWordPrintable

    • 2d
    • windows

      In the unlikely event where JNU_NewStringPlatform fails to allocate new Java String object for printer name, std::bad_alloc is thrown. The handler for the exception does not remove the nameArray, thus it will be leaked.

            Assignee:
            Alexey Ivanov
            Reporter:
            Alexey Ivanov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: