8263893: getPrinterNames() leaks nameArray if Java String allocation fails